  . Fixed missing clean up of OpenSSL engine list - attempt to fix GH-8620.
    (Jakub Zelenka)
  . Fixed bug GH-8430 (OpenSSL compiled with no-md2, no-md4 or no-rmd160 does
    not build). (Jakub Zelenka, fsbruva)

- PDO_ODBC:
  . Fixed bug GH-9372 (HY010 when binding overlong parameter). (cmb)

- SOAP:
  . Fixed bug GH-9720 (Null pointer dereference while serializing the response).
    (cmb)

13 Oct 2022, PHP 8.2.0RC4

- Core:
  . Fixed bug GH-9655 (Pure intersection types cannot be implicitly nullable)
    (Girgias)
  . Fixed bug GH-9589 (dl() segfaults when module is already loaded). (cmb,
    Arnaud)

- Streams:
  . Fixed bug GH-9590 (stream_select does not abort upon exception or empty
    valid fd set). (Arnaud)
  . Fixed bug GH-9653 (file copy between different filesystems). (David Carlier)

29 Sep 2022, PHP 8.2.0RC3

- Core:
  . Fixed observer class notify with Opcache file_cache_only=1. (ilutov)

- Date:
  . Fixed bug with parsing large negative numbers with the @ notation. (Derick)

- Core:
  . Fixes segfault with Fiber on FreeBSD i386 architecture. (David Carlier)

- Fileinfo:
  . Fixed bug GH-8805 (finfo returns wrong mime type for woff/woff2 files).
    (Anatol)

- Opcache:
  . Added indirect call reduction for jit on x86 architectures. (wxue1)

- Sockets:
  . Fixed socket constants regression as of PHP 8.2.0beta3. (Bruce Dou)

- Session:
  . Fixed GH-9584 (Avoid memory corruption when not unregistering custom session
    handler). (ilutov)
  . Fixed bug GH-9583 (session_create_id() fails with user defined save handler
      that doesn't have a validateId() method). (Girgias)

- Standard:
  . Revert "Fixed parse_url(): can not recognize port without scheme."
    (andypost)

15 Sep 2022, PHP 8.2.0RC2

- Core:
  . Fixed bug GH-9500 (Using dnf type with parentheses after readonly keyword
    results in a parse error). (ilutov)
  . Fixed bug GH-9516 ((A&B)|D as a param should allow AB or D. Not just A).
    (Girgias)

- GMP